--- a/pages/4689.html
+++ b/pages/4689.html
@@ -1084,7 +1084,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#effects'>Effects</a><ul><li><a href='#vacuum_energy_and_cosmological_constant'>Vacuum energy and Cosmological constant</a></li><li><a href='#CorrectionToAnomalousMagneticMomentOfTheLeptons'>Anomalous magnetic moment of the leptons</a></li></ul></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#ReferencesAsAnEffectiveFieldTheory'>As a perturbative quantum field theory</a></li><li><a href='#ReferencesNonRenormalizability'>Non-renormalizablity</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#effects'>Effects</a><ul><li><a href='#vacuum_energy_and_cosmological_constant'>Vacuum energy and Cosmological constant</a></li><li><a href='#CorrectionToAnomalousMagneticMomentOfTheLeptons'>Anomalous magnetic moment of the leptons</a></li></ul></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#general'>General</a></li><li><a href='#ReferencesAsAnEffectiveFieldTheory'>As a perturbative quantum field theory</a></li><li><a href='#ReferencesNonRenormalizability'>Non-renormalizablity</a></li><li><a href='#from_string_field_theory'>From string field theory</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A theory of <em>quantum gravity</em> (QG) is supposed to be a <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum field theory</a> (QFT) – or something similar – that corresponds to the <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical field theory</a> of <a class='existingWikiWord' href='/nlab/show/gravity'>gravity</a>, possibly by <a class='existingWikiWord' href='/nlab/show/quantization'>quantization</a>.</p>
@@ -1147,7 +1147,7 @@ margin-left: 0em;
 
 <p>Still another suggestion has been that ordinary quantum field theory might be seen to apply to the ordinary configuration space and action functional of general relativity, if only a suitably adapted parameterization of the configuration space is chosen. Notably one observes that <a class='existingWikiWord' href='/nlab/show/Riemannian+manifold'>Riemannian manifold</a>s may be encoded in terms of <a class='existingWikiWord' href='/nlab/show/connection+on+a+bundle'>connections on the tangent bundle</a> – the <a class='existingWikiWord' href='/nlab/show/Levi-Civita+connection'>Levi-Civita connection</a> – this being manifestly analogous to the nature of the fields in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>. (See <a class='existingWikiWord' href='/nlab/show/first-order+formulation+of+gravity'>first-order formulation of gravity</a>).</p>
 
-<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_e77738f234c666ccaa822e1889c7f9549f70f4b7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
+<p>It has been suggested that therefore quantum gravity may have a description in terms of the <a class='existingWikiWord' href='/nlab/show/holonomy'>holonomy</a>-observables of these connections, their <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a> around loops. Research in this direction has therefore become known as <em>loop quantum gravity</em> . However, little progress has been made in understanding the configuration space of smooth connections in terms of loop observables. In most of the LQG-literature instead it is assumed from the outset that it makes sense to pass to <em>generalized connections</em> : while a smooth connection is the same as a smooth <a class='existingWikiWord' href='/nlab/show/parallel+transport'>parallel transport</a>-<a class='existingWikiWord' href='/nlab/show/functor'>functor</a> on the <a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a> <math class='maruku-mathml' display='inline' id='mathml_ef464425425400f73d1bd8456278133dfd7fa282_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mstyle mathvariant='bold'><mi>P</mi></mstyle> <mn>1</mn></msub><mo stretchy='false'>(</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>→</mo><mstyle mathvariant='bold'><mi>B</mi></mstyle><mi>G</mi></mrow><annotation encoding='application/x-tex'>\mathbf{P}_1(X) \to \mathbf{B}G</annotation></semantics></math>, the “generalized connections” in this context are taken to be non-smooth and non-continuous such functors on sub-categories of paths. It is is not clear how this configuration space relates to that of ordinary gravity.</p>
 
 <p>A plethora of further suggestions has developed out of this, which in the literature often still go under the name “LQG”, even though they may abandon the description of configuration spaces of metrics in terms of loop observables. There is for instance the approach of <em>spin foams</em> or <em><span class='newWikiWord'>causal dynamical triangulations<a href='/nlab/new/causal+dynamical+triangulations'>?</a></span></em>, and that of <em><a class='existingWikiWord' href='/nlab/show/causet'>causets</a></em> , to name just a few.</p>
 
@@ -1292,7 +1292,7 @@ margin-left: 0em;
 <p>and adapted to <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> in</p>
 
 <ul>
-<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_e77738f234c666ccaa822e1889c7f9549f70f4b7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
+<li>F. del Aguila, A. Culatti, R. Munoz-Tapia, M. Perez-Victoria, <em>Supergravity corrections to <math class='maruku-mathml' display='inline' id='mathml_ef464425425400f73d1bd8456278133dfd7fa282_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mi>g</mi><mo>−</mo><mn>2</mn><msub><mo stretchy='false'>)</mo> <mi>l</mi></msub></mrow><annotation encoding='application/x-tex'>(g-2)_l</annotation></semantics></math> in differential renormalization</em>, Nuclear Physics B 504 (1997) 532-550 (<a href='https://arxiv.org/abs/hep-ph/9702342'>arXiv:hep-ph/9702342</a>)</li>
 </ul>
 
 <p>For more discussion of perturbative <a class='existingWikiWord' href='/nlab/show/supergravity'>supergravity</a> see at</p>
@@ -1373,6 +1373,20 @@ margin-left: 0em;
 
 <p>Specifically for <a class='existingWikiWord' href='/nlab/show/4-dimensional+supergravity'>N=8 d=4 supergravity</a> there is evidence that it might be finite at all loops. See the references <a href='4-dimensional+supergravity#PerturbativeQuantumSupergravityN8'>there</a>.</p>
 
+<h3 id='from_string_field_theory'>From string field theory</h3>
+
+<p>Derivation of <a class='existingWikiWord' href='/nlab/show/graviton'>graviton</a>-<a class='existingWikiWord' href='/nlab/show/scattering+amplitude'>scattering amplitudes</a> from <a class='existingWikiWord' href='/nlab/show/string+field+theory'>string field theory</a>:</p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Taejin+Lee'>Taejin Lee</a>, <em>Gravitational Scattering Amplitudes and Closed String Field Theory in the Proper-Time Gauge</em>, EPJ Web of Conferences 168, 07004 (2018) (<a href='https://doi.org/10.1051/epjconf/201816807004'>doi:10.1051/epjconf/201816807004</a>)</p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Taejin+Lee'>Taejin Lee</a>, <em>Four-Graviton Scattering and String Path Integral in the Proper-time gauge</em> (<a href='https://arxiv.org/abs/1806.02702'>arXiv:1806.02702</a>)</p>
+</li>
+</ul>
+
 <p>
 </p>
 
@@ -1382,14 +1396,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May 30, 2018 at 06:49:09.
+  Last revised on June  8, 2018 at 02:37:25.
   See the <a href="https://ncatlab.org/nlab/history/quantum gravity" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/40" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(40 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/quantum+gravity" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/quantum+gravity/41" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(41 revisions)</span> | <a href="/nlab/show/diff/quantum+gravity" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/quantum+gravity" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/quantum gravity/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
