--- a/pages/17337.html
+++ b/pages/17337.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,6 +311,8 @@ margin-left: 0em;
 
 <p>In <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>, <strong>type refinement</strong> is a term initially coined to refer to “datasort refinements”, sub-datatypes induced by refining the set of available constructors, but later broadened to include “index refinements”.</p>
 
+<p>Refinement types are present in languages like LiquidHaskell and F-star. Refinement types are similar to coercions and subset types.</p>
+
 <h3 id='related_concepts'>Related concepts</h3>
 
 <ul>
@@ -323,11 +324,11 @@ margin-left: 0em;
 <ul>
 <li><em>A refinement type by any other name</em>, (<a href='http://www.weaselhat.com/2015/03/16/a-refinement-type-by-any-other-name/'>blog post</a>)</li>
 
-<li>Tim Freeman, <a class='existingWikiWord' href='/nlab/show/Frank+Pfenning'>Frank Pfenning</a>, <em>Reﬁnement types for ML</em>, Proceedings of the ACM Conference on Programming Language Design and Implementation, 1991, pp. 268–277, (<a href='https://www.cs.cmu.edu/~fp/papers/pldi91.pdf'>pdf</a>).</li>
+<li>Tim Freeman, <a class='existingWikiWord' href='/nlab/show/Frank+Pfenning'>Frank Pfenning</a>, <em>Refinement types for ML</em>, Proceedings of the ACM Conference on Programming Language Design and Implementation, 1991, pp. 268–277, (<a href='https://www.cs.cmu.edu/~fp/papers/pldi91.pdf'>pdf</a>).</li>
 
 <li>Hongwei Xi, Frank Pfenning, <em>Dependent types in practical programming</em>, in A. Aiken, editor, Conference Record of the 26th Symposium on Principles of Programming Languages (POPL’99),pages 214–227. ACM Press, January 1999.</li>
 
-<li>Susumu Hayashi, <em>Logic of reﬁnement types</em>, Proceedings of the Workshop on Types for Proofs and Programs, 1993, pp. 157–172</li>
+<li>Susumu Hayashi, <em>Logic of refinement types</em>, Proceedings of the Workshop on Types for Proofs and Programs, 1993, pp. 157–172</li>
 
 <li><a class='existingWikiWord' href='/nlab/show/Joshua+Dunfield'>Joshua Dunfield</a>, <em>Combining Two Forms of Type Refinements</em>, 2002, (<a href='http://www.cs.cmu.edu/~joshuad/papers/combining/'>report</a>)</li>
 
@@ -337,24 +338,25 @@ margin-left: 0em;
 
 <li><a class='existingWikiWord' href='/nlab/show/Paul-Andr%C3%A9+Melli%C3%A8s'>Paul-André Melliès</a>, <a class='existingWikiWord' href='/nlab/show/Noam+Zeilberger'>Noam Zeilberger</a>, <em>Type refinement and monoidal closed bifibrations</em>, <a href='http://arxiv.org/abs/1310.0263'>arXiv:1310.0263</a></li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Paul-Andr%C3%A9+Melli%C3%A8s'>Paul-André Melliès</a>, <a class='existingWikiWord' href='/nlab/show/Noam+Zeilberger'>Noam Zeilberger</a>, <em>Functors are Type Refinement Systems</em>, (<a href='http://noamz.org/papers/funts.pdf'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Paul-Andr%C3%A9+Melli%C3%A8s'>Paul-André Melliès</a>, <a class='existingWikiWord' href='/nlab/show/Noam+Zeilberger'>Noam Zeilberger</a>, <em>Functors are Type Refinement Systems</em>, (<a href='http://noamz.org/papers/funts.pdf'>pdf</a> , <a href='https://hal.inria.fr/hal-01096910'>HAL</a>)</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on April 14, 2016 06:24:35 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (91.125.246.222)
+  <p>
+  Last revised on June  8, 2018 at 09:47:35.
+  See the <a href="https://ncatlab.org/nlab/history/type refinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/type+refinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/type+refinement/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/type+refinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/type+refinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/type+refinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/type+refinement/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/type+refinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/type+refinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/type refinement/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/type+refinement" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/type+refinement" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/type+refinement" id="view_source" rel="nofollow">Source</a>
