--- a/pages/16864.html
+++ b/pages/16864.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8596/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -326,7 +325,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/judgment'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_01a32717a4db76a87179001778d5a7a7ea5bf32f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_bdd627ce470511d245f9dd1c3c537cb2753d1cce_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -512,7 +511,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_01a32717a4db76a87179001778d5a7a7ea5bf32f_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_01a32717a4db76a87179001778d5a7a7ea5bf32f_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/shape+modality'>Pi modality</a> <math class='maruku-mathml' display='inline' id='mathml_bdd627ce470511d245f9dd1c3c537cb2753d1cce_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/flat+modality'>flat modality</a> <math class='maruku-mathml' display='inline' id='mathml_bdd627ce470511d245f9dd1c3c537cb2753d1cce_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊣</mo></mrow><annotation encoding='application/x-tex'>\dashv</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/sharp+modality'>sharp modality</a></p>
 </li>
 </ul>
 </div>
@@ -667,22 +666,32 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>An adjoint logic version of <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a> giving <a class='existingWikiWord' href='/nlab/show/cohesive+homotopy+type+theory'>cohesive homotopy type theory</a> is in</p>
+<p>A framework for (<a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy</a>-)<a class='existingWikiWord' href='/nlab/show/type+theory'>type theoretic</a> adjoint lgic (<a class='existingWikiWord' href='/nlab/show/modal+type+theory'>modal type theory</a>) is discussed, in various stages of generality, in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, <em>Brouwer’s fixed-point theorem in real-cohesive homotopy type theory</em> (<a href='http://arxiv.org/abs/1509.07584'>arXiv:1509.07584</a>)</li>
-</ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, <em>Brouwer’s fixed-point theorem in real-cohesive homotopy type theory</em> (<a href='http://arxiv.org/abs/1509.07584'>arXiv:1509.07584</a>)</p>
 
-<p>For a more general framework see</p>
+<p>(specifically for <a class='existingWikiWord' href='/nlab/show/cohesive+homotopy+type+theory'>cohesive homotopy type theory</a>)</p>
+</li>
 
-<ul>
 <li id='LicataShulman'>
 <p><a class='existingWikiWord' href='/nlab/show/Daniel+Licata'>Dan Licata</a>, <a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, <em>Adjoint logic with a 2-category of modes</em>, in <em><a href='http://lfcs.info/lfcs-2016/'>Logical Foundations of Computer Science 2016</a></em> (<a href='http://dlicata.web.wesleyan.edu/pubs/ls15adjoint/ls15adjoint.pdf'>pdf</a>, <a href='http://dlicata.web.wesleyan.edu/pubs/ls15adjoint/ls15adjoint-lfcs-slides.pdf'>slides</a>)</p>
+
+<p>(for <a class='existingWikiWord' href='/nlab/show/modal+type+theory'>modal</a> <span class='newWikiWord'>unary type theory<a href='/nlab/new/unary+type+theory'>?</a></span>)</p>
 </li>
 
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Daniel+Licata'>Daniel Licata</a>, <a class='existingWikiWord' href='/nlab/show/Mike+Shulman'>Mike Shulman</a>, and <span class='newWikiWord'>Mitchell Riley<a href='/nlab/new/Mitchell+Riley'>?</a></span>, <em>A Fibrational Framework for Substructural and Modal Logics (extended version)</em>, (<a href='http://dlicata.web.wesleyan.edu/pubs/lsr17multi/lsr17multi-ex.pdf'>pdf</a>)</p>
+
+<p>(for <a class='existingWikiWord' href='/nlab/show/modal+type+theory'>modal</a> <a class='existingWikiWord' href='/nlab/show/simple+type+theory'>simple type theory</a>)</p>
 </li>
+</ul>
+
+<p>Review includes</p>
+
+<ul>
+<li id='Licata18'><a class='existingWikiWord' href='/nlab/show/Daniel+Licata'>Dan Licata</a>, <em>Synthetic Mathematics in Modal Dependent Type Theories</em>, tutorial at <em><a href='https://www.him.uni-bonn.de/programs/current-trimester-program/types-sets-constructions/workshop-types-homotopy-type-theory-and-verification/'>Types, Homotopy Theory and Verification</a></em>, 2018 (<a href='http://dlicata.web.wesleyan.edu/pubs/lsr17multi/him-tutorial.pdf'>pdf</a>)</li>
 </ul>
 
 <p>
@@ -694,19 +703,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on February 13, 2018 06:54:34 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (76.167.222.204)
+  <p>
+  Last revised on June 10, 2018 at 11:53:14.
+  See the <a href="https://ncatlab.org/nlab/history/adjoint logic" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/adjoint+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+logic/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/adjoint+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/adjoint+logic" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/adjoint+logic/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/adjoint+logic" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/adjoint+logic" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/adjoint logic/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/adjoint+logic" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/adjoint+logic" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/adjoint+logic" id="view_source" rel="nofollow">Source</a>
