--- a/pages/9129.html
+++ b/pages/9129.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,7 +307,253 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h1 id='contents'>Contents</h1>
+    <div class='rightHandSide'>
+<div class='toc clickDown' tabindex='0'>
+<h3 id='context'>Context</h3>
+
+<h4 id='homotopy_theory'>Homotopy theory</h4>
+
+<div class='hide'>
+<p><strong><a class='existingWikiWord' href='/nlab/show/homotopy+theory'>homotopy theory</a>, <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a>, <a class='existingWikiWord' href='/nlab/show/homotopy+type+theory'>homotopy type theory</a></strong></p>
+
+<p>flavors: <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable</a>, <a class='existingWikiWord' href='/nlab/show/equivariant+homotopy+theory'>equivariant</a>, <a class='existingWikiWord' href='/nlab/show/rational+homotopy+theory'>rational</a>, <a class='existingWikiWord' href='/nlab/show/p-adic+homotopy+theory'>p-adic</a>, <a class='existingWikiWord' href='/nlab/show/proper+homotopy+theory'>proper</a>, <a class='existingWikiWord' href='/nlab/show/geometric+homotopy+type+theory'>geometric</a>, <a class='existingWikiWord' href='/nlab/show/cohesive+%28infinity%2C1%29-topos'>cohesive</a>, <a class='existingWikiWord' href='/nlab/show/directed+homotopy+theory'>directed</a>…</p>
+
+<p>models: <a class='existingWikiWord' href='/nlab/show/topological+homotopy+theory'>topological</a>, <a class='existingWikiWord' href='/nlab/show/simplicial+homotopy+theory'>simplicial</a>, <a class='existingWikiWord' href='/nlab/show/localic+homotopy+theory'>localic</a>, …</p>
+
+<p>see also <strong><a class='existingWikiWord' href='/nlab/show/algebraic+topology'>algebraic topology</a></strong></p>
+
+<p><strong>Introductions</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Introduction+to+Topology+--+2'>Introduction to Basic Homotopy Theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Introduction+to+Homotopy+Theory'>Introduction to Abstract Homotopy Theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometry+of+physics+--+homotopy+types'>geometry of physics -- homotopy types</a></p>
+</li>
+</ul>
+
+<p><strong>Definitions</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>homotopy</a>, <a class='existingWikiWord' href='/nlab/show/higher+homotopy'>higher homotopy</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+type'>homotopy type</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Pi-algebra'>Pi-algebra</a>, <a class='existingWikiWord' href='/nlab/show/spherical+object'>spherical object and Pi(A)-algebra</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+coherent+category+theory'>homotopy coherent category theory</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopical+category'>homotopical category</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/model+category'>model category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/category+of+fibrant+objects'>category of fibrant objects</a>, <a class='existingWikiWord' href='/nlab/show/cofibration+category'>cofibration category</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Waldhausen+category'>Waldhausen category</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+category'>homotopy category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/Ho%28Top%29'>Ho(Top)</a></li>
+</ul>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/homotopy+category+of+an+%28infinity%2C1%29-category'>homotopy category of an (∞,1)-category</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Paths and cylinders</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>left homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/cylinder+object'>cylinder object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mapping+cone'>mapping cone</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy'>right homotopy</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/path+space+object'>path object</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/mapping+cocone'>mapping cocone</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+universal+bundle'>universal bundle</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/interval+object'>interval object</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+localization'>homotopy localization</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/infinitesimal+interval+object'>infinitesimal interval object</a></p>
+</li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Homotopy groups</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+group'>homotopy group</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+group'>fundamental group</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+group+of+a+topos'>fundamental group of a topos</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Brown-Grossman+homotopy+group'>Brown-Grossman homotopy group</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/categorical+homotopy+groups+in+an+%28infinity%2C1%29-topos'>categorical homotopy groups in an (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/geometric+homotopy+groups+in+an+%28infinity%2C1%29-topos'>geometric homotopy groups in an (∞,1)-topos</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid'>fundamental ∞-groupoid</a></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+groupoid'>fundamental groupoid</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/path+groupoid'>path groupoid</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+in+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid in a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+infinity-groupoid+of+a+locally+infinity-connected+%28infinity%2C1%29-topos'>fundamental ∞-groupoid of a locally ∞-connected (∞,1)-topos</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+%28infinity%2C1%29-category'>fundamental (∞,1)-category</a></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+category'>fundamental category</a></li>
+</ul>
+</li>
+</ul>
+
+<p><strong>Basic facts</strong></p>
+
+<ul>
+<li><a class='existingWikiWord' href='/nlab/show/fundamental+group+of+the+circle+is+the+integers'>fundamental group of the circle is the integers</a></li>
+</ul>
+
+<p><strong>Theorems</strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/fundamental+theorem+of+covering+spaces'>fundamental theorem of covering spaces</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Freudenthal+suspension+theorem'>Freudenthal suspension theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Blakers-Massey+theorem'>Blakers-Massey theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/higher+homotopy+van+Kampen+theorem'>higher homotopy van Kampen theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/nerve+theorem'>nerve theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Whitehead+theorem'>Whitehead&#39;s theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Hurewicz+theorem'>Hurewicz theorem</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Galois+theory'>Galois theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/homotopy+hypothesis'>homotopy hypothesis</a>-theorem</p>
+</li>
+</ul>
+</div>
+</div>
+</div>
+
+<h1 id='contents'>Contents</h1>
 <div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
 <h2 id='definition'>Definition</h2>
 
@@ -339,19 +584,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on April 12, 2017 06:36:00 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (185.25.95.132)
+  <p>
+  Last revised on June 11, 2018 at 08:40:12.
+  See the <a href="https://ncatlab.org/nlab/history/higher homotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/higher+homotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+homotopy/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/higher+homotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+homotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/higher+homotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/higher+homotopy/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/higher+homotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/higher+homotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/higher homotopy/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/higher+homotopy" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/higher+homotopy" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/higher+homotopy" id="view_source" rel="nofollow">Source</a>
