--- a/pages/2484.html
+++ b/pages/2484.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -497,7 +497,7 @@ margin-left: 0em;
 <p>and in <a href='#Lawvere16'>Lawvere 16</a>:</p>
 
 <blockquote>
-<p><a class='existingWikiWord' href='/nlab/show/Pierre+Gabriel'>Peter Gabriel</a> <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> had explained some of the same ideas at Oberwolfach in 1965-66, providing a context in which Grothendieck’s proposal seemed natural. For example, he emphasized the traditional view that the points of an algebraic space form a covariant functor on the category of field extensions of the base.</p>
+<p><a class='existingWikiWord' href='/nlab/show/Pierre+Gabriel'>Peter Gabriel</a> <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo></mrow><annotation encoding='application/x-tex'>[</annotation></semantics></math>…<math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>]</annotation></semantics></math> had explained some of the same ideas at Oberwolfach in 1965-66, providing a context in which Grothendieck’s proposal seemed natural. For example, he emphasized the traditional view that the points of an algebraic space form a covariant functor on the category of field extensions of the base.</p>
 
 <p>Grothendieck’s advice in his Colloquium talk was that 1960 ingredients (like Zariski opens etc.) are easily extracted from the category of functors, when needed.</p>
 </blockquote>
@@ -506,12 +506,12 @@ margin-left: 0em;
 
 <h2 id='example'>Example</h2>
 
-<p>The functor from commutative rings to sets which sends a ring, <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>, to the set of simultaneous solutions in <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>R^n</annotation></semantics></math> of a set of polynomials, <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>f</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>f</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>f_1, \ldots, f_k</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>[</mo><msub><mi>t</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>t</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\mathbb{Z}[t_1, \ldots,t_n]</annotation></semantics></math> corresponds to the affine scheme <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mi>Spec</mi><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>[</mo><msub><mi>t</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>t</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><msub><mi>f</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>f</mi> <mi>k</mi></msub><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>X = Spec(\mathbb{Z}[t_1, \ldots,t_n]/(f_1, \ldots,f_k))</annotation></semantics></math>. These <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-points are then equivalently the hom-space</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Hom</mi> <mi>schemes</mi></msub><mo stretchy='false'>(</mo><mi>Spec</mi><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo><mo>,</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<p>The functor from commutative rings to sets which sends a ring, <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>, to the set of simultaneous solutions in <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>R</mi> <mi>n</mi></msup></mrow><annotation encoding='application/x-tex'>R^n</annotation></semantics></math> of a set of polynomials, <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>f</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>f</mi> <mi>k</mi></msub></mrow><annotation encoding='application/x-tex'>f_1, \ldots, f_k</annotation></semantics></math> in <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℤ</mi><mo stretchy='false'>[</mo><msub><mi>t</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>t</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>\mathbb{Z}[t_1, \ldots,t_n]</annotation></semantics></math> corresponds to the affine scheme <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>X</mi><mo>=</mo><mi>Spec</mi><mo stretchy='false'>(</mo><mi>ℤ</mi><mo stretchy='false'>[</mo><msub><mi>t</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>t</mi> <mi>n</mi></msub><mo stretchy='false'>]</mo><mo stretchy='false'>/</mo><mo stretchy='false'>(</mo><msub><mi>f</mi> <mn>1</mn></msub><mo>,</mo><mi>…</mi><mo>,</mo><msub><mi>f</mi> <mi>k</mi></msub><mo stretchy='false'>)</mo><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>X = Spec(\mathbb{Z}[t_1, \ldots,t_n]/(f_1, \ldots,f_k))</annotation></semantics></math>. These <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-points are then equivalently the hom-space</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>Hom</mi> <mi>schemes</mi></msub><mo stretchy='false'>(</mo><mi>Spec</mi><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo><mo>,</mo><mi>X</mi><mo stretchy='false'>)</mo><mo>.</mo></mrow><annotation encoding='application/x-tex'>
 Hom_{schemes}(Spec(R), X).
 
 </annotation></semantics></math></div>
-<p>The functor which sends <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> to the points of the projective space <math class='maruku-mathml' display='inline' id='mathml_8bc194759cab36b199c85a90743dee09ed957063_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>ℙ</mi> <mi>R</mi> <mi>n</mi></msubsup></mrow><annotation encoding='application/x-tex'>\mathbb{P}^n_R</annotation></semantics></math> corresponds to a non-affine scheme.</p>
+<p>The functor which sends <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> to the points of the projective space <math class='maruku-mathml' display='inline' id='mathml_af81c610eb7e5f7fca74576d507b023610960aae_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msubsup><mi>ℙ</mi> <mi>R</mi> <mi>n</mi></msubsup></mrow><annotation encoding='application/x-tex'>\mathbb{P}^n_R</annotation></semantics></math> corresponds to a non-affine scheme.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -521,7 +521,7 @@ Hom_{schemes}(Spec(R), X).
 
 <h2 id='references'>References</h2>
 
-<p>The original idea is reported on in</p>
+<p>The original idea is advertized in</p>
 
 <ul>
 <li id='Grothendieck65'>
@@ -541,9 +541,13 @@ Hom_{schemes}(Spec(R), X).
 </li>
 
 <li id='Lawvere16'>
-<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, email to <a class='existingWikiWord' href='/nlab/show/Adeel+Khan+Yusufzai'>Adeel Khan</a>, March 2016 (<a href='https://nforum.ncatlab.org/discussion/7521/functorial-geometry/?Focus=69419#Comment_69419'>web exceprt</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/William+Lawvere'>William Lawvere</a>, email to <a class='existingWikiWord' href='/nlab/show/Adeel+Khan+Yusufzai'>Adeel Khan</a>, March 2016 (<a href='https://nforum.ncatlab.org/discussion/7521/functorial-geometry/?Focus=69419#Comment_69419'>web excerpt</a>)</p>
 </li>
+</ul>
 
+<p>See also</p>
+
+<ul>
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Michel+Demazure'>Michel Demazure</a>, <a class='existingWikiWord' href='/nlab/show/Pierre+Gabriel'>Pierre Gabriel</a>, <em>Introduction to algebraic geometry and algebraic groups</em>, North-Holland Mathematics Studies Volume 39 (1980).</p>
 </li>
@@ -563,7 +567,7 @@ Hom_{schemes}(Spec(R), X).
 
 <div class="revisedby">
   <p>
-  Last revised on June 11, 2018 at 12:59:39.
+  Last revised on June 11, 2018 at 13:22:04.
   See the <a href="https://ncatlab.org/nlab/history/functorial geometry" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
