--- a/pages/19462.html
+++ b/pages/19462.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -293,7 +293,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8605/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8605/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -563,9 +563,9 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#related_entries'>Related entries</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p><strong>Generalized quantifiers</strong> were introduced into model theory by the Polish Logician A. Mostowski in order to supplement the usual existential and universal quantifiers of first-order predicate logic with the aim to circumvent its shortcomings concerning expressivity and categoricity.</p>
+<p><strong>Generalized quantifiers</strong> were introduced into <a class='existingWikiWord' href='/nlab/show/model+theory'>model theory</a> by the Polish Logician A. Mostowski in order to supplement the usual <a class='existingWikiWord' href='/nlab/show/existential+quantifier'>existential</a> and <a class='existingWikiWord' href='/nlab/show/universal+quantifier'>universal quantifiers</a> of <a class='existingWikiWord' href='/nlab/show/predicate+logic'>first-order predicate logic</a> with the aim to circumvent shortcomings concerning expressivity and categoricity.</p>
 
-<p>Their use for the semantic analysis of natural language determiners in the footsteps of <a class='existingWikiWord' href='/nlab/show/Richard+Montague'>Richard Montague</a> revolutionized <a class='existingWikiWord' href='/nlab/show/linguistics'>linguistics</a> in the early 1970s.</p>
+<p>Their use for the <a class='existingWikiWord' href='/nlab/show/semantics'>semantic</a> analysis of natural language determiners in the footsteps of <a class='existingWikiWord' href='/nlab/show/Richard+Montague'>Richard Montague</a> revolutionized <a class='existingWikiWord' href='/nlab/show/linguistics'>linguistics</a> in the early 1970s.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -608,14 +608,14 @@ margin-left: 0em;
 <p>Several chapters treat their model-theoretic role in</p>
 
 <ul>
-<li><span class='newWikiWord'>J. Barwise<a href='/nlab/new/Jon+Barwise'>?</a></span>, <a class='existingWikiWord' href='/nlab/show/Solomon+Feferman'>S. Feferman</a> (eds.), <em>Model-theoretic Logics</em> , Springer Heidelberg 1985 (freely available online: <a href='http://projecteuclid.org/euclid.pl/1235417263#toc'>toc</a>) .</li>
+<li>J. Barwise, <a class='existingWikiWord' href='/nlab/show/Solomon+Feferman'>S. Feferman</a> (eds.), <em>Model-theoretic Logics</em> , Springer Heidelberg 1985 (freely available online: <a href='http://projecteuclid.org/euclid.pl/1235417263#toc'>toc</a>) .</li>
 </ul>
 
 <p>For the use of generalized quantifiers in natural language semantics see</p>
 
 <ul>
 <li>
-<p><span class='newWikiWord'>J. Barwise<a href='/nlab/new/Jon+Barwise'>?</a></span>, R. Cooper, <em>Generalized Quantifiers and Natural Language</em> , Linguistics and Philosophy <strong>4</strong> no.2 (1981) pp.159-219.</p>
+<p>J. Barwise, R. Cooper, <em>Generalized Quantifiers and Natural Language</em> , Linguistics and Philosophy <strong>4</strong> no.2 (1981) pp.159-219.</p>
 </li>
 
 <li>
@@ -645,14 +645,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on June 12, 2018 at 10:59:07.
+  Last revised on June 12, 2018 at 11:17:09.
   See the <a href="https://ncatlab.org/nlab/history/generalized quantifier" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/generalized+quantifier" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/generalized+quantifier" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/generalized+quantifier/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/generalized+quantifier" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/generalized+quantifier" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/generalized quantifier/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
