--- a/pages/16740.html
+++ b/pages/16740.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -312,7 +311,7 @@ margin-left: 0em;
 
 <h4 id='contributions_to_natural_language_semantics'>Contributions to natural language semantics</h4>
 
-<p>He is best known for his groundbreaking work in <a class='existingWikiWord' href='/nlab/show/linguistics'>linguistics</a>: his introduction of <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a> and <em>generalized quantifiers</em> achieved for <em>natural language semantics</em> the same what <a class='existingWikiWord' href='/nlab/show/Gottlob+Frege'>Gottlob Frege</a> had achieved almost a century earlier for the quantification theory of formal languages.</p>
+<p>He is best known for his groundbreaking work in <a class='existingWikiWord' href='/nlab/show/linguistics'>linguistics</a>: his introduction of <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a> and <a class='existingWikiWord' href='/nlab/show/generalized+quantifier'>generalized quantifiers</a> achieved for <em>natural language semantics</em> the same what <a class='existingWikiWord' href='/nlab/show/Gottlob+Frege'>Gottlob Frege</a> had achieved almost a century earlier for the quantification theory of formal languages.</p>
 
 <p>In fact, whereas Frege saw the surface position of quantifiers as a logical defect of natural languages which had to be amended for his <em>Begriffsschrift</em>, the powerful techniques of <a class='existingWikiWord' href='/nlab/show/lambda-calculus'>lambda calculus</a> employed by Montague permitted to interpret quantifiers in situ as well, leading to a theory of linguistic interpretation, called <a class='existingWikiWord' href='/nlab/show/Montague+grammar'>Montague grammar</a>, of a mathematical precision and elegance.</p>
 
@@ -327,11 +326,21 @@ margin-left: 0em;
 <h2 id='related_entries'>Related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Alfred+Tarski'>Alfred Tarski</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/generalized+quantifier'>generalized quantifier</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/Solomon+Feferman'>Solomon Feferman</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Alfred+Tarski'>Alfred Tarski</a></p>
+</li>
 
-<li><a class='existingWikiWord' href='/nlab/show/reflection+principle'>reflection principle</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Solomon+Feferman'>Solomon Feferman</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/reflection+principle'>reflection principle</a></p>
+</li>
 </ul>
 
 <h2 id='references'>References</h2>
@@ -353,19 +362,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October 30, 2015 07:04:09 
-  by <a class="existingWikiWord" href="/nlab/show/David+Corfield">David Corfield</a>
-  (129.12.18.158)
+  <p>
+  Last revised on June 12, 2018 at 11:08:18.
+  See the <a href="https://ncatlab.org/nlab/history/Richard Montague" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Richard+Montague" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Montague/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Richard+Montague" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Montague" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/Richard+Montague" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Richard+Montague/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Richard+Montague" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Richard+Montague" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/Richard Montague/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/Richard+Montague" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/Richard+Montague" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/Richard+Montague" id="view_source" rel="nofollow">Source</a>
