--- a/pages/19466.html
+++ b/pages/19466.html
@@ -524,7 +524,7 @@ margin-left: 0em;
 </p>
 </div></div>
 
-<h4 id='category_theory_2'><math class='maruku-mathml' display='inline' id='mathml_8b5478871a9a36078673d0a51b536ad8d029b49e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
+<h4 id='category_theory_2'><math class='maruku-mathml' display='inline' id='mathml_17fbef774364f3c405ddb55bfcdbf5e3d5650a16_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-Category theory</h4>
 
 <div class='hide'>
 <p><strong><a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category+theory'>(∞,1)-category theory</a></strong></p>
@@ -557,7 +557,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_8b5478871a9a36078673d0a51b536ad8d029b49e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
+<p><a class='existingWikiWord' href='/nlab/show/equivalence+in+an+%28infinity%2C1%29-category'>equivalences in</a>/<a class='existingWikiWord' href='/nlab/show/equivalence+of+%28infinity%2C1%29-categories'>of</a> <math class='maruku-mathml' display='inline' id='mathml_17fbef774364f3c405ddb55bfcdbf5e3d5650a16_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>∞</mn><mo>,</mo><mn>1</mn><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>(\infty,1)</annotation></semantics></math>-categories</p>
 </li>
 
 <li>
@@ -1023,7 +1023,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#Examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#Examples'>Examples</a></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>The idea of <em>presheaf of groupoids</em> may refer to one of the following distinct but closely related concepts:</p>
@@ -1055,9 +1055,9 @@ margin-left: 0em;
 <h2 id='Examples'>Examples</h2>
 
 <ul>
-<li>For <math class='maruku-mathml' display='inline' id='mathml_8b5478871a9a36078673d0a51b536ad8d029b49e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> an ordinary <a class='existingWikiWord' href='/nlab/show/site'>site</a>, each <a class='existingWikiWord' href='/nlab/show/covering'>covering</a> family <math class='maruku-mathml' display='inline' id='mathml_8b5478871a9a36078673d0a51b536ad8d029b49e_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mover><mo>→</mo><mrow><msub><mi>ι</mi> <mi>i</mi></msub></mrow></mover><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{U_i \overset{\iota_i}{\to} X\}</annotation></semantics></math> induces a <em><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+groupoid'>Cech groupoid</a></em>, which is really a presheaf of groupoids</li>
+<li>For <math class='maruku-mathml' display='inline' id='mathml_17fbef774364f3c405ddb55bfcdbf5e3d5650a16_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>𝒞</mi></mrow><annotation encoding='application/x-tex'>\mathcal{C}</annotation></semantics></math> an ordinary <a class='existingWikiWord' href='/nlab/show/site'>site</a>, each <a class='existingWikiWord' href='/nlab/show/covering'>covering</a> family <math class='maruku-mathml' display='inline' id='mathml_17fbef774364f3c405ddb55bfcdbf5e3d5650a16_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mover><mo>→</mo><mrow><msub><mi>ι</mi> <mi>i</mi></msub></mrow></mover><mi>X</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>\{U_i \overset{\iota_i}{\to} X\}</annotation></semantics></math> induces a <em><a class='existingWikiWord' href='/nlab/show/%C4%8Cech+groupoid'>Cech groupoid</a></em>, which is really a presheaf of groupoids</li>
 </ul>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_8b5478871a9a36078673d0a51b536ad8d029b49e_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo>∈</mo><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><mi>Grpd</mi><mo stretchy='false'>]</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_17fbef774364f3c405ddb55bfcdbf5e3d5650a16_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi><mo stretchy='false'>(</mo><mo stretchy='false'>{</mo><msub><mi>U</mi> <mi>i</mi></msub><mo stretchy='false'>}</mo><mo stretchy='false'>)</mo><mo>∈</mo><mo stretchy='false'>[</mo><msup><mi>𝒞</mi> <mi>op</mi></msup><mo>,</mo><mi>Grpd</mi><mo stretchy='false'>]</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
   C(\{U_i\}) \in [\mathcal{C}^{op}, Grpd]
   \,.
 
@@ -1068,20 +1068,28 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+groupoids'>model structure on simplicial groupoids</a></li>
 </ul>
 
+<h2 id='references'>References</h2>
+
+<p>A <a class='existingWikiWord' href='/nlab/show/model+category'>model category</a>-<a class='existingWikiWord' href='/nlab/show/structure'>structure</a> on catgegories of presheaves of groupoids, modeling <a class='existingWikiWord' href='/nlab/show/%282%2C1%29-category'>(2,1)-categories</a> of <a class='existingWikiWord' href='/nlab/show/stack'>stacks</a> the way that the <a class='existingWikiWord' href='/nlab/show/model+structure+on+simplicial+presheaves'>model structure on simplicial presheaves</a> model <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-category'>(∞,1)-categories</a> of <a class='existingWikiWord' href='/nlab/show/infinity-stack'>∞-stacks</a> is discussed in</p>
+
+<ul>
+<li id='Hollander01'><a class='existingWikiWord' href='/nlab/show/Sharon+Hollander'>Sharon Hollander</a>, <em>A homotopy theory for stacks</em>, Israel Journal of Mathematics, 163(1), 93-124 (<a href='http://arxiv.org/abs/math.AT/0110247'>arXiv:math.AT/0110247</a>)</li>
+</ul>
+
 <p>
 </p>
 </div>
 
 <div class="revisedby">
   <p>
-  Created on June 13, 2018 at 10:57:04.
+  Last revised on June 13, 2018 at 15:49:18.
   See the <a href="https://ncatlab.org/nlab/history/presheaf of groupoids" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/presheaf+of+groupoids" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/presheaf+of+groupoids" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/presheaf+of+groupoids/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/presheaf+of+groupoids" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/presheaf+of+groupoids" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/presheaf of groupoids/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
